swag fmt && swag init
